# Petrovich_TP_Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  keyboards.py  main.py  pyproject.toml  requirements.lock.txt  requirements.txt  states.py  user_storage.py  validators.py
.github/workflows/: ci.yml
adapters/max/: _utils.py  _wizard_flow.py  atlassian_flow.py  electronic_queue_flow.py  email_flow.py  email_forwarding_flow.py  email_groups_flow.py  handlers.py  jira_profile_department_max.py  kb_chatbot_flow.py  lupa_flow.py  mail_browser_flow.py  main_max.py  network_flow.py  orgtech_flow.py  (+5 more)
config/: forms_catalog.yaml
core/: ad_ldap.py  admin_ticket_report.py  atlassian_support.py  electronic_queue.py  email_forwarding.py  email_groups.py  email_owa.py  forms_catalog.py  fsm_sanitize.py  fsm_storage.py  http_error_utils.py  jira_aa.py  jira_email.py  jira_form_engine.py  jira_labels.py  jira_lupa.py  jira_pc.py  jira_retry.py  jira_status_ru.py  jira_wms.py  log_rate_limit.py  lupa_constants.py  network_problem.py  notifications.py  orgtech.py  password.py  password_requests.py  pc_problem.py  peripheral_equipment.py  registration.py  stc_tasks.py
docs/: 30.03.2026DONE.md  NEXT_STEPS_FORM_ENGINE.md  PLAN_SUPABASE.md  SQLITE_PERFORMANCE_PLAN.md
handlers/: admin.py  comments.py  create_ticket.py  menu_extra.py  my_tickets.py  registration.py  start.py
middlewares/: antispam.py
tests/: test_atlassian_support_api.py  test_max_atlassian_flow.py  test_telegram_atlassian_flow.py  test_ticket_wizard_screens.py  test_wizard_step.py
(+5 files in other folders)
